Corrected id, col alignments, rearranged headers, error checking, smaller cols

--- a/JSAV.css
+++ b/JSAV.css
@@ -144,7 +144,8 @@
 
 .JSAVControls .actionbutton { background: #999999; border-radius: 4px; border-color: #666666; }
 .JSAVControls input { margin-left: 8pt; }
-.JSAV .idCell, .JSAV .idCell a:link, .JSAV .idCell a:visited {text-align: left; color: #274c7b; font-weight: normal; font: 9pt sans-serif; width: 100px; min-width: 100px; max-width: 100px; padding-left: 18px; cursor: pointer;}
+.JSAV .idCell, .JSAV .idCell a:link, .JSAV .idCell a:visited {text-align: left; color: #274c7b; font-weight: normal; font: 9pt sans-serif; width: 110px; min-width: 110px; max-width: 110px; cursor: pointer;}
+.JSAV .idCell { padding-left: 18px; }
 .JSAV p, .JSAV label {color: #274c7b;}
 .JSAV .highlightrow  {height: 18px;}
 .JSAV .br_highlightrow  {height: 18px; border-right: 3px solid #999999;}
@@ -157,7 +158,7 @@
 .JSAV .header {white-space: nowrap; direction: ltr;}
 .JSAV .footer {white-space: nowrap; direction: ltr;}
 .JSAV .outerseqtable {white-space: nowrap; overflow-y: scroll; overflow-x: hidden; direction: rtl; max-height: 30em;}
-.JSAV .seqtable {white-space: nowrap; direction: ltr; max-height: 30em;}
+.JSAV .seqtable {white-space: nowrap; direction: ltr; max-height: 30em; margin-left:18px;}
 
 /* Transposed version of above */
 .JSAV .tr_seqtable {overflow-y: hidden; overflow-x: scroll; direction: ltr;}
@@ -555,13 +556,13 @@ table.results th.headerSort {
 table.results th.idCell {
     text-align: left; 
     color: #fff; 
-    width: 80px; 
-    min-width: 80px; 
-    max-width: 80px; 
+    width: 110px; 
+    min-width: 110px; 
+    max-width: 110px; 
     overflow: hidden; 
     border: none;
     text-overflow: ellipsis; 
-    padding-left: 38px;}
+    padding-left: 18px;}
 
 table.results th.headerText {
     padding: 0;
@@ -582,10 +583,12 @@ table.results td.bodyText {
 table.results td.idCell, table.results td.idCell a:link, table.results td.idCell a:visited {
     text-align: left; 
     color: #274c7b; 
-    width: 100px; 
-    min-width: 100px; 
-    max-width: 100px; 
-    cursor: pointer;
+    width: 110px; 
+    min-width: 110px; 
+    max-width: 110px; 
+    cursor: pointer;}
+
+table.results td.idCell {
     padding-left: 18px;}
 
 table.results th.headerHide {
